@@ -1,18 +1,23 @@
 package com.product.productapp.service;
 
-
-import com.product.productapp.dto.CreateProductRequestDto;
-import com.product.productapp.dto.CreateProductResponseDto;
-import com.product.productapp.dto.ProductDto;
+import com.product.productapp.authentication.AuthenticationUtil;
+import com.product.productapp.dto.product.CreateProductRequestDto;
+import com.product.productapp.dto.product.CreateProductResponseDto;
+import com.product.productapp.dto.product.ProductDto;
+import com.product.productapp.entity.Client;
 import com.product.productapp.entity.Product;
 import com.product.productapp.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.BeanUtils;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @Slf4j
@@ -21,14 +26,20 @@ public class ProductService {
 
     private final ProductRepository productRepository;
 
+    private final AuthenticationUtil authenticationUtil;
 
     public CreateProductResponseDto createProduct(CreateProductRequestDto requestDto){
+
+        Client currentClient = authenticationUtil.getCurrentClient();
+
         Product product = Product.builder()
                 .name(requestDto.getName())
                 .description(requestDto.getDescription())
                 .price(requestDto.getPrice())
                 .brand(requestDto.getBrand())
                 .color(requestDto.getColor())
+                .createdAt(LocalDateTime.now())
+                .clientId(currentClient.getId())
                 .build();
         productRepository.save(product);
 
@@ -39,6 +50,19 @@ public class ProductService {
                 .build();
 
     }
+
+    public String deleteProductById(Long id) {
+        Client currentClient = authenticationUtil.getCurrentClient();
+
+        Product product = productRepository.findByIdAndAndClientId(id, currentClient.getId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                        String.format("Current Client %s, doesn't have a product with id %s",
+                                currentClient.getUsername(), id)));
+
+        productRepository.delete(product);
+        return String.format("Product with id %s has been deleted successfully", id);
+    }
+
 
     public List<ProductDto> getAllProducts(){
         List<Product> allProducts = new ArrayList<>();
@@ -53,7 +77,25 @@ public class ProductService {
                                 .price(product.getPrice())
                                 .color(product.getColor())
                                 .build()
-                ).collect(Collectors.toList());
+                ).toList();
+    }
+
+    public ProductDto updateProductById(CreateProductRequestDto requestDto, Long id) {
+        Client client = authenticationUtil.getCurrentClient();
+        Product product = productRepository.findByIdAndAndClientId(id, client.getId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, String.format("Product with id %s was not found", id)));
+
+        BeanUtils.copyProperties(requestDto, product, "id", "createdAt");
+        product.setUpdatedAt(LocalDateTime.now());
+        productRepository.save(product);
+
+        return ProductDto.builder().id(product.getId())
+                .name(product.getName())
+                .description(product.getDescription())
+                .brand(product.getBrand())
+                .price(product.getPrice())
+                .color(product.getColor())
+                .build();
     }
 
 
